# app.js
@@ -7,6 +7,7 @@ var indexRouter = require('./routes/index')
 var usersRouter = require('./routes/users')
 var productsRouter = require('./routes/product')
 var cartRouter = require('./routes/cart')
+var orderRouter = require('./routes/order')
 
 const swaggerDocument = require('./swagger/swagger.json')
 
@@ -70,6 +71,7 @@ app.use(express.static(path.join(__dirname, 'public')))
 app.use('/users', usersRouter)
 app.use('/product', productsRouter)
 app.use('/cart', cartRouter)
+app.use('/orders', orderRouter)
 // 路由
 app.use('/', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 
